[gd_scene load_steps=3 format=3 uid="uid://bgvft2j6u04mi"]

[ext_resource type="Script" path="res://addons/godolibur/UI/Elements/Buttons/PasswordCharacter.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b17dhl855h8wj" path="res://addons/godolibur/UI/Elements/UiArrow/UiArrow.tscn" id="2"]

[node name="PasswordCharacter" type="Button"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="UiArrow" parent="." instance=ExtResource("2")]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_top = 20.0
offset_right = 0.0
offset_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 4

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
